<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/optionShoppingCart"
        android:title="@string/shopping_cart_message"
        android:orderInCategory="3"
        android:icon="@drawable/outline_shopping_cart_black_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/optionFavorite"
        android:title="@string/favorite_message"
        android:orderInCategory="2"
        android:icon="@drawable/outline_favorite_border_black_24"
        app:showAsAction="ifRoom"/>

     <item
         android:id="@+id/optionSearch"
         android:title="@string/search_message"
         android:orderInCategory="1"
         android:icon="@drawable/outline_search_black_24"
         app:showAsAction="ifRoom"/>
</menu>