<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PaymentShippingActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@id/llContainer"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:listitem="@layout/cart_adapter" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding_default"
        android:background="?android:attr/windowBackground"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvSendTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to_message"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvGoToAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_address_message"
            android:textColor="#2D31FA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvSendTo"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tvPayWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_default"
            android:text="@string/i_pay_with_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSendTo" />

        <TextView
            android:id="@+id/tvOptionPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_a_payment_option_message"
            android:textColor="#FF5C8D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvPayWith"
            android:maxLines="2"
            android:ellipsize="end"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/common_margin_default"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/tvPayWith" />

        <TextView
            android:id="@+id/tvArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_default"
            android:text="@string/article_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/tvSubtotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvArticle" />

        <TextView
            android:id="@+id/tvShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_default"
            android:text="@string/shopping_message"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvArticle" />

        <TextView
            android:id="@+id/tvShoppingPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvShopping" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_default"
            android:text="@string/total_message"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvShopping" />

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTotal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMakePayment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_button_height"
            android:layout_marginTop="@dimen/common_margin_default"
            android:text="@string/make_payment_message"
            android:backgroundTint="@color/red_color"
            app:cornerRadius="@dimen/common_radius_middle"
            app:layout_constraintTop_toBottomOf="@id/tvTotal"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>